Edge_AI_Cluster_Configuration/monitoring/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      nodeSelector:
        kubernetes.io/hostname: master   # 이 부분 추가
      containers:
        - name: grafana
          image: grafana/grafana
          ports:
            - containerPort: 3000
